test/errors/function_no_body.correct
error: function_no_body.li:2:24: expected '{' but found ';'
│ fn functionWithNoBody();
│                        ~
│                        ^
